@@ -1,3 +1,10 @@
+2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Remove references to control/build as
+	this no longer exists.
+	* Makefile.in: Regenerated.
+	
 2008-05-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
